--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -15,7 +15,7 @@
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <button type="submit" onclick="refreshPage()" class="btn btn-danger">REFRESH</button>
+    <button type="submit" onclick="refreshPage()" class="btn btn-info">REFRESH</button>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
